fixed collapsing top menu on mobile and tablet

--- a/scss/components/_menu.scss
+++ b/scss/components/_menu.scss
@@ -21,9 +21,9 @@
       transition: ease-in-out 0.4s;
       height: 100vh;
       width: 100vw;
-      max-width: 480px;
       background: #000;
       z-index: 1;
+      padding-top: 60px;
       @include defaultFlexCenter();
     }
     @include forDevices(laptop desktop-s desktop-l) {
@@ -35,16 +35,25 @@
     .menu__list {
       @include forDevices(mobile tablet) {
         @include columnFlexNoWrap($justify-content: space-between);
+        max-height: 340px;
+        height: 55vh;
+        text-align: center;
       }
     }
     .menu__item {
       margin: 0 10px;
     }
     .menu__link {
-      font-size: map-get($fontSizes, copy);
       padding: 10px 15px;
+      @include forDevices(mobile tablet) {
+        font-size: 17px;
+        height: 15vh;
+      }
       @include forDevices(laptop) {
         padding: 10px 12px;
+      }
+      @include forDevices(laptop desktop-all) {
+        font-size: map-get($fontSizes, copy);
       }
     }
   }
